# apache-pinot-playbook

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  SUMMARY.md  book.json  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
contracts/: README.md
data/: README.md  merchants.csv  sample_trip_events.jsonl  sample_trip_events.kafka.txt  sample_trip_state.jsonl  sample_trip_state.kafka.txt
diagrams/: capstone-architecture.mmd  cluster-topology.mmd  index-decision-tree.mmd  multistage-plan.mmd  query-path.mmd  segment-lifecycle.mmd  upsert-flow.mmd
docs/: 00-preface.md  01-apache-pinot-at-a-glance.md  02-architecture-and-components.md  03-storage-model-segments-tenants-clusters.md  04-schema-design-and-data-modeling.md  05-table-config-deep-dive.md  06-indexing-cookbook.md  07-batch-ingestion.md  08-stream-ingestion.md  09-upsert-dedup-cdc.md  10-querying-v1-and-sql.md  11-multi-stage-engine-v2.md  12-time-series-engine.md  13-apis-clients-and-contracts.md  14-deployment-docker-kubernetes-cloud.md  15-security-and-governance.md  16-routing-partitioning-rebalancing.md  17-performance-engineering.md  18-observability-operations-and-minions.md  19-failure-modes-and-troubleshooting.md  20-patterns-antipatterns-and-decision-framework.md  21-capstone-building-a-rides-platform.md  22-exercises.md  23-solution-key.md  24-glossary.md  99-references.md
jobs/: merchants.job.yml
labs/: README.md  lab-01-local-cluster.md  lab-02-schemas-and-tables.md  lab-03-stream-ingestion.md  lab-04-index-tuning.md  lab-05-upsert-cdc.md  (+16 more)
(+50 files in other folders)
